--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
   </head>
 
   <body>
-    
+    <h1 class="text-center">FORTNITE BATTLE ROYALE</h1>
+      <div class="container mx-auto shadow-xl max-width-[30%]">
+        <h2>FORTNITE</h2>
+      </div>
   </body>
 </html>
