--- a/src/index.html
+++ b/src/index.html
@@ -8,57 +8,72 @@
     <title>Vite App</title>
   </head>
 
-  <body>
-    <div class="text-center font-['Barlow_Condensed']">
+  <body class="bg-[#21B8E0]">
+    <div class="text-center font-['PT Sans Narrow']">
       <h1 class="text-[46px] font-bold">New York City Attractions</h1>
-        <div class="container text-center mx-auto flex flex-nowrap justify-center place-self-center">
-          <div class="container shadow-2xl border-4 border-indigo-300 rounded max-w-[500px] bg-green-500 py-6 m-8 text-center">
-            <h2 class="text-[38px] font-medium mb-5">Freedom Tower</h2>
-            <img class="mt-2 w-[40%] items-center" src="freedom-tower-2.jpg">
-            <p class="text-[18px] my-6">A signature figure of American freedom and prosperity</p>
-          </div>
-          <div class="container shadow-2xl border-4 border-indigo-300 rounded max-w-[500px] bg-green-500 py-6 m-8">
+        <div class="container text-center mx-auto flex flex-nowrap">
+          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[25%] bg-green-500 py-6 m-8 text-center">
             <h2 class="text-[38px] font-medium mb-5"></h2>
-            <img class="mt-2 w-[480px]" src="">
+            <img class="mt-2 w-[70%] h-[70%] mx-auto" src="hotdog.PNG">
             <p class="text-[18px] my-6"></p>
           </div>
-          <div class="container shadow-2xl border-4 border-indigo-300 rounded max-w-[500px] bg-green-500 py-6 m-8">
+          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[25%] bg-green-500 py-6 m-8 text-center">
             <h2 class="text-[38px] font-medium mb-5"></h2>
-            <img class="mt-2" src="">
+            <img class="mt-2 w-[70%] h-[70%] mx-auto" src="bull.jpg">
+            <p class="text-[18px] my-6"></p>
+          </div>
+          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[25%] bg-green-500 py-6 m-8 text-center">
+            <h2 class="text-[38px] font-medium mb-5"></h2>
+            <img class="mt-2 w-[70%] h-[70%] mx-auto" src="bridge.jpg">
+            <p class="text-[18px] my-6"></p>
+          </div>
+          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[25%] bg-green-500 py-6 m-8 text-center">
+            <h2 class="text-[38px] font-medium mb-5"></h2>
+            <img class="mt-2 w-[70%] h-[70%] mx-auto" src="siths.jpg">
+            <p class="text-[18px] my-6">Izak Zoltan sitting at a computer</p>
+          </div>
+        </div>
+        <div class="container mx-auto flex flex-nowrap justify-center items-stretch">
+          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[25%] bg-green-500 py-6 m-8 text-center">
+            <h2 class="text-[38px] font-medium mb-5"></h2>
+            <img class="mt-2 w-[70%] h-[70%] mx-auto" src="columbia.jpeg">
+            <p class="text-[18px] my-6"></p>
+          </div>
+          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[25%] bg-green-500 py-6 m-8 text-center">
+            <h2 class="text-[38px] font-medium mb-5"></h2>
+            <img class="mt-2 w-[70%] h-[70%] mx-auto" src="met.jpg">
+            <p class="text-[18px] my-6"></p>
+          </div>
+          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[25%] bg-green-500 py-6 m-8 text-center">
+            <h2 class="text-[38px] font-medium mb-5"></h2>
+            <img class="mt-2 w-[40%] mx-auto" src="">
+            <p class="text-[18px] my-6"></p>
+          </div>
+          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[25%] bg-green-500 py-6 m-8 text-center">
+            <h2 class="text-[38px] font-medium mb-5"></h2>
+            <img class="mt-2 w-[40%] mx-auto" src="">
             <p class="text-[18px] my-6"></p>
           </div>
         </div>
         <div class="container mx-auto flex flex-nowrap justify-center items-stretch">
-          <div class="container shadow-2xl border-4 border-indigo-300 rounded max-w-[500px] bg-green-500 py-6 m-8">
+          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[25%] bg-green-500 py-6 m-8 text-center">
             <h2 class="text-[38px] font-medium mb-5"></h2>
-            <img class="mt-2" src="">
+            <img class="mt-2 w-[40%] mx-auto" src="">
             <p class="text-[18px] my-6"></p>
           </div>
-          <div class="container shadow-2xl border-4 border-indigo-300 rounded max-w-[500px] bg-green-500 py-6 m-8">
+          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[25%] bg-green-500 py-6 m-8 text-center">
             <h2 class="text-[38px] font-medium mb-5"></h2>
-            <img class="mt-2 w-[480px]" src="">
+            <img class="mt-2 w-[40%] mx-auto" src="">
             <p class="text-[18px] my-6"></p>
           </div>
-          <div class="container shadow-2xl border-4 border-indigo-300 rounded max-w-[500px] bg-green-500 py-6 m-8">
+          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[25%] bg-green-500 py-6 m-8 text-center">
             <h2 class="text-[38px] font-medium mb-5"></h2>
-            <img class="mt-2" src="">
+            <img class="mt-2 w-[40%] mx-auto" src="">
             <p class="text-[18px] my-6"></p>
           </div>
-        </div>
-        <div class="container mx-auto flex flex-nowrap justify-center items-stretch">
-          <div class="container shadow-2xl border-4 border-indigo-300 rounded max-w-[500px] bg-green-500 py-6 m-8">
+          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[25%] bg-green-500 py-6 m-8 text-center">
             <h2 class="text-[38px] font-medium mb-5"></h2>
-            <img class="mt-2" src="">
-            <p class="text-[18px] my-6"></p>
-          </div>
-          <div class="container shadow-2xl border-4 border-indigo-300 rounded max-w-[500px] bg-green-500 py-6 m-8">
-            <h2 class="text-[38px] font-medium mb-5"></h2>
-            <img class="mt-2 w-[480px]" src="">
-            <p class="text-[18px] my-6"></p>
-          </div>
-          <div class="container shadow-2xl border-4 border-indigo-300 rounded max-w-[500px] bg-green-500 py-6 m-8">
-            <h2 class="text-[38px] font-medium mb-5"></h2>
-            <img class="mt-2" src="">
+            <img class="mt-2 w-[40%] mx-auto" src="">
             <p class="text-[18px] my-6"></p>
           </div>
         </div>
