--- a/src/index.html
+++ b/src/index.html
@@ -12,69 +12,69 @@
     <div class="text-center font-['PT Sans Narrow']">
       <h1 class="text-[46px] font-bold">New York City Attractions</h1>
         <div class="container text-center mx-auto flex flex-nowrap">
-          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[25%] bg-green-500 py-6 m-8 text-center">
-            <h2 class="text-[38px] font-medium mb-5"></h2>
-            <img class="mt-2 w-[70%] h-[70%] mx-auto" src="hotdog.PNG">
-            <p class="text-[18px] my-6"></p>
+          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[21%] bg-green-500 py-6 m-8 text-center">
+            <h2 class="text-[38px] font-medium mb-5">NYC Hot Dogs</h2>
+            <img class="mt-2 w-[70%] mx-auto" src="hotdog.PNG">
+            <p class="text-[18px] my-6">A very cool hot dog stand</p>
           </div>
-          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[25%] bg-green-500 py-6 m-8 text-center">
-            <h2 class="text-[38px] font-medium mb-5"></h2>
-            <img class="mt-2 w-[70%] h-[70%] mx-auto" src="bull.jpg">
-            <p class="text-[18px] my-6"></p>
+          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[21%] bg-green-500 py-6 m-8 text-center">
+            <h2 class="text-[38px] font-medium mb-5">Stock Market Bull</h2>
+            <img class="mt-2 w-[70%] mx-auto" src="bull.jpg">
+            <p class="text-[18px] my-6">We love Wall Street!</p>
           </div>
-          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[25%] bg-green-500 py-6 m-8 text-center">
-            <h2 class="text-[38px] font-medium mb-5"></h2>
-            <img class="mt-2 w-[70%] h-[70%] mx-auto" src="bridge.jpg">
-            <p class="text-[18px] my-6"></p>
+          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[21%] bg-green-500 py-6 m-8 text-center">
+            <h2 class="text-[38px] font-medium mb-5">Brooklyn Bridge</h2>
+            <img class="mt-2 w-[70%] mx-auto" src="bridge.jpg">
+            <p class="text-[18px] my-6">Connecting two boroughs worse than SI</p>
           </div>
-          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[25%] bg-green-500 py-6 m-8 text-center">
-            <h2 class="text-[38px] font-medium mb-5"></h2>
-            <img class="mt-2 w-[70%] h-[70%] mx-auto" src="siths.jpg">
+          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[21%] bg-green-500 py-6 m-8 text-center">
+            <h2 class="text-[38px] font-medium mb-5">Staten Island Tech</h2>
+            <img class="mt-2 w-[70%] mx-auto" src="siths.jpg">
             <p class="text-[18px] my-6">Izak Zoltan sitting at a computer</p>
           </div>
         </div>
         <div class="container mx-auto flex flex-nowrap justify-center items-stretch">
-          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[25%] bg-green-500 py-6 m-8 text-center">
-            <h2 class="text-[38px] font-medium mb-5"></h2>
-            <img class="mt-2 w-[70%] h-[70%] mx-auto" src="columbia.jpeg">
-            <p class="text-[18px] my-6"></p>
+          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[21%] bg-green-500 py-6 m-8 text-center">
+            <h2 class="text-[38px] font-medium mb-5">Columbia</h2>
+            <img class="mt-2 w-[70%] mx-auto" src="columbia.jpeg">
+            <p class="text-[18px] my-6">A T20, which is cool</p>
           </div>
-          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[25%] bg-green-500 py-6 m-8 text-center">
-            <h2 class="text-[38px] font-medium mb-5"></h2>
-            <img class="mt-2 w-[70%] h-[70%] mx-auto" src="met.jpg">
-            <p class="text-[18px] my-6"></p>
+          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[21%] bg-green-500 py-6 m-8 text-center">
+            <h2 class="text-[38px] font-medium mb-5">Met Museum</h2>
+            <img class="mt-2 w-[70%] mx-auto" src="met.jpg">
+            <p class="text-[18px] my-6">I did my summer hw here</p>
           </div>
-          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[25%] bg-green-500 py-6 m-8 text-center">
-            <h2 class="text-[38px] font-medium mb-5"></h2>
-            <img class="mt-2 w-[40%] mx-auto" src="">
-            <p class="text-[18px] my-6"></p>
+          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[21%] bg-green-500 py-6 m-8 text-center">
+            <h2 class="text-[38px] font-medium mb-5">Verrazano Bridge</h2>
+            <img class="mt-2 w-[70%] mx-auto" src="verrazzano-bridge.jpg">
+            <p class="text-[18px] my-6">The gateway to Staten Island</p>
           </div>
-          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[25%] bg-green-500 py-6 m-8 text-center">
-            <h2 class="text-[38px] font-medium mb-5"></h2>
-            <img class="mt-2 w-[40%] mx-auto" src="">
-            <p class="text-[18px] my-6"></p>
+          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[21%] bg-green-500 py-6 m-8 text-center">
+            <h2 class="text-[38px] font-medium mb-5">Central Park</h2>
+            <img class="mt-2 w-[70%] mx-auto" src="central_park.jpg">
+            <p class="text-[18px] my-6">A very nice park in Manhattan</p>
           </div>
         </div>
         <div class="container mx-auto flex flex-nowrap justify-center items-stretch">
-          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[25%] bg-green-500 py-6 m-8 text-center">
-            <h2 class="text-[38px] font-medium mb-5"></h2>
-            <img class="mt-2 w-[40%] mx-auto" src="">
-            <p class="text-[18px] my-6"></p>
+          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[21%] bg-green-500 py-6 m-8 text-center">
+            <h2 class="text-[38px] font-medium mb-5">Prospect Park</h2>
+            <img class="mt-2 w-[70%] mx-auto" src="prospect_park.jpg">
+            <p class="text-[18px] my-6">A slightly worse park in Brooklyn</p>
           </div>
-          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[25%] bg-green-500 py-6 m-8 text-center">
-            <h2 class="text-[38px] font-medium mb-5"></h2>
-            <img class="mt-2 w-[40%] mx-auto" src="">
-            <p class="text-[18px] my-6"></p>
+          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[21%] bg-green-500 py-6 m-8 text-center">
+            <h2 class="text-[38px] font-medium mb-5">NYC Metro</h2>
+            <img class="mt-2 w-[70%] mx-auto" src="metro.jpg">
+            <p class="text-[18px] my-6">America's only city with decent public transport</p>
           </div>
-          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[25%] bg-green-500 py-6 m-8 text-center">
-            <h2 class="text-[38px] font-medium mb-5"></h2>
-            <img class="mt-2 w-[40%] mx-auto" src="">
-            <p class="text-[18px] my-6"></p>
+          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[21%] bg-green-500 py-6 m-8 text-center">
+            <h2 class="text-[38px] font-medium mb-5">Coney Island</h2>
+            <img class="mt-2 w-[70%] mx-auto" src="coney_island.jpg">
+            <p class="text-[18px] my-6">A pretty nice theme park and beach</p>
           </div>
-          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[25%] bg-green-500 py-6 m-8 text-center">
-            <h2 class="text-[38px] font-medium mb-5"></h2>
-            <img class="mt-2 w-[40%] mx-auto" src="">
-            <p class="text-[18px] my-6"></p>
+          <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[21%] bg-green-500 py-6 m-8 text-center">
+            <h2 class="text-[38px] font-medium mb-5">Bronx Zoo</h2>
+            <img class="mt-2 w-[70%] mx-auto" src="bronx_zoo.jpg">
+            <p class="text-[18px] my-6">Wow, who knew this zoo was this huge?</p>
           </div>
         </div>
     </div>
