--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body class="bg-[#21B8E0]">
-    <div class="text-center font-['PT Sans Narrow']">
+    <div class="text-center font-['Barlow_Condensed']">
       <h1 class="text-[46px] font-bold">New York City Attractions</h1>
         <div class="container text-center mx-auto flex flex-nowrap">
           <div class="container shadow-2xl border-4 border-indigo-300 rounded w-[21%] bg-green-500 py-6 m-8 text-center">
